GB3-867: fix spacing of divider in info query

--- a/src/app/map/components/feature-info-overlay/feature-info-general-information/feature-info-general-information.component.scss
+++ b/src/app/map/components/feature-info-overlay/feature-info-general-information/feature-info-general-information.component.scss
@@ -73,7 +73,6 @@ span {
   row-gap: 0;
 
   .external-links__button {
-    margin: 8px 0;
     display: flex;
     background-color: functions.convert-hex-to-rgba(ktzh-variables.$zh-black100, 0.1);
 
